# vitray-widget

./: .gitignore  Cargo.toml  README.md  build_installer.ps1  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_full.txt  build_log_v2.txt  build_log_v2_2.txt  build_log_v2_3.txt  build_log_win_2.txt  bundle_release.ps1  clippy_report.txt  debug_build.ps1  index.html  install.ps1  install.sh  setup_dev.ps1  setup_wix.ps1
.github/workflows/: release.yml
assets/: vitray-widget.desktop
dists/stable/: Release
dists/stable/main/binary-amd64/: Packages
pool/main/: vitray-widget_0.3.0-1_amd64.deb
src/: gpu.rs  main.rs  monitor.rs  platform.rs  settings.rs  settings_ui.rs  shortcuts.rs  shortcuts_ui.rs  style.css  terminal.rs  ui.rs
wix/: License.rtf  main.wxs
