[package]
name = "vitray-widget"
version = "0.1.0"
edition = "2021"
description = "A glassmorphic desktop widget for system monitoring and terminal access."
license = "MIT"

[dependencies]
gtk4 = "0.10"
vte4 = "0.9"
sysinfo = "0.30"

[package.metadata.deb]
maintainer = "Moebius <moebius@example.com>"
copyright = "2025, Moebius"
depends = "$auto, libgtk-4-1, libvte-2.91-gtk4-0"
assets = [
    ["target/release/vitray-widget", "usr/bin/", "755"],
    ["assets/vitray-widget.desktop", "usr/share/applications/", "644"],
    ["src/style.css", "usr/share/vitray-widget/style.css", "644"],
]
