[package]
name = "vitray-widget"
version = "0.3.0"
edition = "2021"
description = "A glassmorphic desktop widget for system monitoring and terminal access."
license = "MIT"
authors = ["Moebius <moebius@example.com>"]

[dependencies]
gtk4 = "0.10"
sysinfo = "0.30"

clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
auto-launch = "0.5"
font-kit = "0.14.3"
smol = "2.0.2"
glib = "0.21"
async-channel = "2.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
vte4 = "0.9"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.deb]
maintainer = "Moebius <moebius@example.com>"
copyright = "2025, Moebius"
depends = "$auto, libgtk-4-1, libvte-2.91-gtk4-0"
assets = [
    ["target/release/vitray-widget", "usr/bin/", "755"],
    ["assets/vitray-widget.desktop", "usr/share/applications/", "644"],
    ["assets/icon.png", "usr/share/icons/hicolor/512x512/apps/vitray-widget.png", "644"],
    ["src/style.css", "usr/share/vitray-widget/style.css", "644"],
]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_qualifications = "warn"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
perf = "warn"
style = "warn"
complexity = "warn"
suspicious = "warn"
correctness = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
